# polk-russia-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
migrations/models/: 0_20230403170932_init.py
source/: __main__.py  config.py
source/database/: engine.py
source/database/models/: __init__.py  hiking.py
source/database/services/: __init__.py  hiking.py
source/keyboards/: __init__.py  choice.py  empty.py  menu.py  numbered.py  start.py
source/messages/: __init__.py  advice.py  back.py  brief.py  find.py  hiking.py  menu.py
source/routers/: __init__.py  advice.py  back.py  brief.py  find.py  hiking.py
source/states/: __init__.py  menu.py
